[gd_scene load_steps=11 format=3 uid="uid://dfh5r553kua0a"]

[ext_resource type="Script" uid="uid://d378vuqbtmu2a" path="res://scripts/enemy.gd" id="1_8c00y"]
[ext_resource type="Script" uid="uid://cbytxgc3ophoe" path="res://scripts/components/health_component.gd" id="1_h17bh"]
[ext_resource type="Script" uid="uid://hqnoqlqypuo4" path="res://scripts/states/enemy/e_idle.gd" id="1_lkcdx"]
[ext_resource type="Script" uid="uid://de7p6bbrswxkf" path="res://scripts/components/hitbox_component.gd" id="2_fpxyv"]
[ext_resource type="Script" uid="uid://bqgxfle68x2yf" path="res://scripts/states/state_machine.gd" id="2_jqw88"]
[ext_resource type="Script" uid="uid://dwjt6qd64607k" path="res://scripts/attack.gd" id="3_lkcdx"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fpxyv"]
radius = 3.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8c00y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lkcdx"]

[sub_resource type="SphereShape3D" id="SphereShape3D_jqw88"]
radius = 10.0

[node name="TestEnemy" type="CharacterBody3D"]
script = ExtResource("1_8c00y")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_jqw88")
initial_state = NodePath("eIdle")

[node name="eIdle" type="Node" parent="StateMachine"]
script = ExtResource("1_lkcdx")

[node name="ePursue" type="Node" parent="StateMachine"]

[node name="eAttack" type="Node" parent="StateMachine"]

[node name="eDie" type="Node" parent="StateMachine"]

[node name="HitboxComponent" type="Area3D" parent="."]
script = ExtResource("2_fpxyv")
metadata/_custom_type_script = "uid://de7p6bbrswxkf"

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CylinderShape3D_fpxyv")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("1_h17bh")
metadata/_custom_type_script = "uid://cbytxgc3ophoe"

[node name="Attack" type="Node" parent="."]
script = ExtResource("3_lkcdx")
metadata/_custom_type_script = "uid://dwjt6qd64607k"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_8c00y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_lkcdx")

[node name="scanradius" type="Area3D" parent="."]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="scanradius"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0251465, 0)
shape = SubResource("SphereShape3D_jqw88")
